# sudoku

./: .gitignore  .gitmodules  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen_versions  configure  configure.ac  makefile
autom4te.cache/: output.1  requests  traces.0  traces.1
m4/: min_autoconf_version.m4  min_automake_version.m4
src/: Debug.h  Direction.cpp  Direction.h  Field.cpp  Field.h  Makefile.am  NumberSet.cpp  NumberSet.h  main.cpp
